2009-06-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/bondtyper.cpp: Add oxime functional group assignment:
	PR#2793910.

	* src/kekulize.cpp: Additional cleanups. Should be more accurate
	across a wide range of ring systems. Fixes PR# 2705497 and
	PR#1814248.

	* test/files/nci.smi: Add test cases for PR above.

	* src/phmodel.cpp: Fix PR#2802980. Allow single-atom charge
	transformations.

2009-06-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp (expandcycle): Rewritten as cleaner recursive
	function. Look for largest possible aromatic cycle, including
	handling fused "figure 8" ring systems.

2009-06-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp (expandcycle): Fix PR#2705497. Kekulize has
	problems with fused aromatic rings joined by a non-aromatic
	ring. Make sure when expanding aromatic cycles that we only accept
	atoms which are in the *same* ring from OBMol::GetSSSR().

	* test/*: Update with recent changes.

2009-06-18  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/Python/README, scripts/csharp/README: Minor updates

2009-06-16  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/OBCSharp and CSharp files in scripts: Separate .NET
	and Mono SWIG files. Move .NET files to windows-vc2005. Update
	relevant files.

2009-06-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.cpp (Read): If we used ReadFile, close the file
	after an error.

2009-06-14  Chris Morley <c.morley@gaseq.co.uk>

	* src/formats/inchiformat.cpp: InChI adds an implicit H to H and 
	represents H2 with one implicit H. Since H does not have implict H
	in OB, need to treat as special	cases.
	Fixes #2794908, where H was written wrongly to InChI and H2 read
	wrongly.
	
	* windows-vc2005/libinchi.dll,libinchi.lib: replaced by libstdinchi.dll
	and libstdinchi.lib
	* windows-vc2005/OBInchi/OBInchi.vcproj: updated for new inchi version.

2009-06-14  Noel O'Boyle  <baoilleach@gmail.com>
