@@ -256,7 +256,7 @@ C9H7Br2NO 304.966 302.889
 C4H4N2 80.088 80.0374
 C4H4N2 80.088 80.0374
 C5H8 68.117 68.0626
-C16H12O2 236.265 236.084
+C16H10O2 234.249 234.068
 C14H10O2 210.228 210.068
 C17H11NO 245.275 245.084
 C17H11NO 245.275 245.084
